[package]
name = "rod"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
    ".",
    "playground",
    "wasmtest",
]

[dependencies]
# Data structures
uuid = { version = "0.8.2", features = ["v4", "serde", "wasm-bindgen"] }
radix_trie = { version = "0.2", features = ["serde"] }
once_cell = "1.8.0"
scc = "0.5.2"
thiserror = "1.0.29"

# Logging
tracing = "0.1.27"

# Serialization
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
base64 = "0.13.0"

# Async
num_cpus = "1.13.0"
easy-parallel = "3.1.0"
async-executor = "1.4.1"
futures-lite = "1.12.0"
blocking = "1.0.2"
async-trait = "0.1.51"
async-timer = "1.0.0-beta.7"
getrandom = { version = "*", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.5"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
debug = false