[package]
name = "rod"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
    ".",
    "playground",
    "wasmtest",
]

[features]
default = ["borsh"]
json = ["serde", "serde_json", "ulid/serde"]

[dependencies]
# Data structures
ulid = { version = "0.4.1" }
# radix_trie = { version = "0.2", features = ["serde"] }
once_cell = "1.8.0"
scc = "0.5.2"
thiserror = "1.0.29"

# Logging
tracing = "0.1.27"

# Serialization
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_json = { version = "1.0.67", optional = true }
borsh = { version = "0.9.1", optional = true }

# Async
futures-lite = "1.12.0"
async-trait = "0.1.51"
async-timer = "1.0.0-beta.7"
getrandom = { version = "*", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Async
easy-parallel = "3.1.0"
num_cpus = "1.13.0"
blocking = "1.0.2"
async-executor = "1.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.5"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
debug = false