[package]
name = "rod"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
    ".",
    "playground",
    "wasmtest",
]

[features]
default = ["borsh"]
json = ["serde", "serde_json", "ulid/serde", "base64"]

[dependencies]
# Data structures
ulid = { version = "0.4.1" }

once_cell = "1.8.0"
scc = "0.5.2"
thiserror = "1.0.29"

# Logging
tracing = "0.1.27"

# Serialization
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_json = { version = "1.0.67", optional = true }
borsh = { version = "0.9.1", optional = true }
base64 = { version = "0.13.0", optional = true }

# Async
async-trait = "0.1.51"
tap = "1.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Async
futures-lite = "1.12.0"
easy-parallel = "3.1.0"
num_cpus = "1.13.0"
blocking = "1.0.2"
async-executor = "1.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Async
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"

[profile.release]
lto = true
opt-level = "z"
debug = false
