[package]
name = "playground"
version = "0.1.0"
edition = "2018"

[dependencies]
rod = { path = "../"}
serde_json = "1.0.67"
async-executor = "1.4.1"
futures-lite = "1.12.0"
anyhow = "1.0.44"
async-timer = "1.0.0-beta.7"
tracing-subscriber = "0.2.22"
tracing-error = "0.1.2"
atty = "0.2.14"
tracing = "0.1.27"